fixed header z-index was greater than modals

--- a/app/assets/stylesheets/pages/_fitness_library.css.scss
+++ b/app/assets/stylesheets/pages/_fitness_library.css.scss
@@ -783,7 +783,7 @@ ul.exer_list_view li span.tx_rht.heading_txt{
      position: fixed;
      top: 0;
      left: 0;
-     z-index: 9999;
+     z-index: 999;
 }
 
 .fixed .show_img_on_scol .lib_image_box{
